--- a/src/App.css
+++ b/src/App.css
@@ -292,6 +292,7 @@ body {
     padding-left: 70px !important;
     font-size: 2.5rem;
     text-align: center;
+    padding-top: 30%;
   }
 
   .intro h3 {
